<resources>
    <string name="app_name">Marvel Geek</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="todo">TODO</string>
    <!-- strings are being used in the sign up activity and fragment -->
    <string name="sign_up_prompt">Please enter your information in the field below to Continue.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="Verify_email_address">Verify Email Address</string>
    <string name="password">Password</string>
    <string name="Verify_password">Verify Password</string>
    <string name="incorrect_email_password">Your email and password is incorrect</string>
    <string name="incorrect_email_match">your email do not match</string>
    <string name="incorrect_password_match">your password do not natch</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="add_to_favorite_s">Add to Favorite\'s</string>
    <string name="incorrect_email_or_password">Email or password is incorrect please try again</string>
    <string name="blank_email">please don\'t leave email blank</string>
    <string name="blank_password">please don\'t leave password blank</string>
    <string name="blank_name">please don\'t leave first or last name blank</string>
    <string name="description_not_available">Description is currently not available.</string>
    <string name="other_resources_for_this_character">Other Resources for this character below</string>
    <string name="number_of_comics">Number Of Comics:</string>
    <string name="price">Price:</string>
    <string name="series">Serie\'s</string>
    <string name="serie_s_name">Series Name</string>
    <string name="description">Description</string>
    <string name="IssueNum">Issue # :</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="start_year">Start year:</string>
    <string name="end_year">End year:</string>
    <string name="rating">Rating:</string>
    <string name="event_type">Event Type:</string>
    <string name="link_below_provide_extra_info">Link below provide extra info</string>


</resources>
