<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="16dp"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/textDisplayColor"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cancel_signin"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/btn_signin_SignIn"
        app:layout_constraintStart_toStartOf="@+id/btn_signin_SignIn"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin_SignIn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_signIn"
            style="@style/TextLabelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textColor="@color/textDisplayColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_signIn"
            style="@style/TextLabelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Verify_password"
            android:textColor="@color/textDisplayColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signin_SignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout8"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />
</androidx.constraintlayout.widget.ConstraintLayout>