<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_eventDetail"
            android:layout_width="250dp"
            android:layout_height="250dp"

            android:layout_marginStart="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="81dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/start_date"
            android:textColor="@color/textDisplayColor"
            app:layout_constraintStart_toStartOf="@+id/iv_eventDetail"
            app:layout_constraintTop_toBottomOf="@+id/tv_eventName_ed" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/end_date"
            android:textColor="@color/textDisplayColor"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/tv_startDate_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/textDisplayColor"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/textView15" />

        <TextView
            android:id="@+id/tv_endDate_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/textDisplayColor"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/textView16" />

        <GridView
            android:id="@+id/gv_extraInfo_eventDetail"
            android:layout_width="352dp"
            android:layout_height="496dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:numColumns="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/other_resources_for_this_character"
            android:textAlignment="center"
            android:textColor="@color/textDisplayColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/gv_extraInfo_eventDetail"
            app:layout_constraintStart_toStartOf="@+id/gv_extraInfo_eventDetail"
            app:layout_constraintTop_toBottomOf="@+id/gv_extraInfo_eventDetail" />

        <TextView
            android:id="@+id/tv_link_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:textAlignment="center"
            android:textColor="@color/textDisplayColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView20"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/tv_eventName_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_eventDetail"
            app:layout_constraintStart_toStartOf="@+id/iv_eventDetail"
            app:layout_constraintTop_toBottomOf="@+id/iv_eventDetail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>