<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_comicImage_comicDetail"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_comicDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/textDisplayColor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_comicImage_comicDetail"
            app:layout_constraintStart_toStartOf="@+id/iv_comicImage_comicDetail"
            app:layout_constraintTop_toBottomOf="@+id/iv_comicImage_comicDetail" />

        <TextView
            android:id="@+id/tv_description_comicDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="center"
            android:textColor="@color/textDisplayColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_comicDetail" />

        <Button
            android:id="@+id/btn_favorite_comicDetail"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/add_to_favorite_s"
            app:layout_constraintEnd_toEndOf="@+id/tv_description_comicDetail"
            app:layout_constraintStart_toStartOf="@+id/tv_description_comicDetail"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_comicDetail" />

        <GridView
            android:id="@+id/gv_comicRelated_display"
            android:layout_width="0dp"
            android:layout_height="496dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:numColumns="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_favorite_comicDetail" >

        </GridView>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/other_resources_for_this_character"
            android:textColor="@color/textDisplayColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/gv_comicRelated_display"
            app:layout_constraintStart_toStartOf="@+id/gv_comicRelated_display"
            app:layout_constraintTop_toBottomOf="@+id/gv_comicRelated_display" />

        <TextView
            android:id="@+id/tv_link_comic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>